--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
     "react-native-vector-icons": "9.0.0",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "rn-sliding-up-panel": "2.4.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
